apps/task-manager/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 3000
    targetPort: http
